# fairytales_resarch

./: .cursorrules  .env  .env.example  .gitignore  ATU_types.csv  ATU_types.md  ATU_types_complete.md  ATU_types_zh.md  DEPENDENCIES.md  EndingTypes.md  HelperType.md  HelperType_zh.md  INSTALL.md  Motifs.csv  Motifs_complete.csv  Motifs_complete.md  OllamaSetup.md  README.md  Resources.md  TODO  VALIDATION_EVALUATION.md  character_arctypes.md  character_arctypes_zh.md  motif_index_2016.md  package-lock.json  pyproject.toml  stac_detection_colab.ipynb  时间计划表中文版.md
ATU_Resources/: ATU_types.csv  ATU_types.md  ATU_types_complete.csv
Character_Resources/: HelperType.md  sentiment.csv
Motif/: Motifs_orphaned.csv  Motifs_zh.md
Propp_Resoruces/: Proppian_Functions_zh.md  propp_functions_guide_en.md  propp_functions_guide_zh.md
Universal Narrative Action Taxonomy/: Universal_Narrative_Action_Taxonomy.md
annotation_tools/: .gitignore  CHECKLIST.md  TEST_ORGANIZATION.md  TEST_VERSION_ISOLATION.md  V3_LOADING_ROBUSTNESS_REPORT.md  V3_SAVE_CHECK_REPORT.md  index.html  install_deps.sh  package-lock.json  package.json  server.js  test_all_paths.js  test_arbitrary_folder.js  test_arbitrary_paths.js  test_complete_load.js  test_load_paths.js  test_save_load.js  test_simple_paths.js  test_version_isolation.js  vite.config.js
backend/: README.md  main.py  requirements.txt  smoke_test.py  start.sh
datasets/: ChineseFolktalesList.csv
docs/: 30-Day Distributed Research Plan_ The Digital Silk Road.md  LLM 文本分割开发文档.md  MoralValue.md  Narrative标注Prompt草案.md  Resources.md  STAC.md  文本分割论文结果可视化验证方案.md
evaluation_results/: CH_003_孟姜女哭长城_prediction.json  validation_summary.json  (+1 more)
(+1693 files in other folders)
