[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fairytales-research"
version = "0.0.0"
description = "Fairytales research: annotation tool + Ollama-backed auto-annotation backend"
readme = "README.md"
requires-python = ">=3.9"

# Keep runtime deps minimal here; the backend has its own requirements.txt.
# You can optionally install backend deps with: pip install -r backend/requirements.txt

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["."]
include = ["llm_model*"]
exclude = ["annotation_tools*", "datasets*", "docs*", "papers*", "scripts*"]
